# crud-generator

./: Cargo.toml  README.md
src/: commons.rs  faker.rs  helpers.rs  lib.rs
src/create/: endpoint_gen.rs  func_gen.rs  mod.rs  struct_gen.rs
src/delete/: endpoint_gen.rs  func_gen.rs  mod.rs
src/patch/: endpoint_gen.rs  func_gen.rs  mod.rs  struct_gen.rs
src/read/: endpoint_gen.rs  func_gen.rs  mod.rs
