[package]
name = "crud_generator_derive"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "visit", "extra-traits", "fold"] }
quote = "1.0"
proc-macro2 = "1"
dotenv = "0.15.0"
diesel = {version = "1.4", features=["postgres"]}
